2007-12-09  Mickael Remond  <mremond@process-one.net>

	* src/msg/fr.msg: Added missing space.

2007-12-09  Badlop  <badlop@process-one.net>

	* src/msgs/ru.msg: Updated (thanks to Konstantin Khomoutov)

2007-12-08  Badlop  <badlop@process-one.net>

	* src/msgs/ja.msg: New translation (thanks to Tsukasa Hamano)

	* src/msgs/nl.msg: Updated (thanks to Andreas from Unstable.nl)

	* src/ejabberd_config.erl: Report human-readable message when
	Mnesia spool files are not readable.

2007-12-08  Mickael Remond  <mremond@process-one.net>

	* src/ejabberd_s2s_out.erl: Increase dialback timeout as dialback can
        sometimes take longer than expected.

2007-12-08  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: disco_sm_items bugfix

2007-12-07  Alexey Shchepin  <alexey@process-one.net>

	* src/ejabberd_sm.erl: Bugfix

2007-12-07  Badlop  <badlop@process-one.net>

	* src/Makefile.in: Fix compilation warnings: Part 5: To fix a
	warning about behaviour undefined, the erlang module that
	implements the behaviour must be compiled before the module that
	uses such behaviour (EJAB-290)

	* src/eldap/eldap.erl: Fix compilation warnings: Part 4 (EJAB-290)
	* src/web/ejabberd_web_admin.erl: Likewise

	* src/mod_irc/iconv.erl: Fix compilation warnings: 3 (EJAB-290)
	* src/mod_irc/mod_irc.erl: Likewise
	* src/mod_irc/mod_irc_connection.erl: Likewise
	* src/mod_pubsub/mod_pubsub.erl: Likewise
	* src/stringprep/stringprep.erl: Likewise
	* src/web/ejabberd_http.erl: Likewise
	* src/web/ejabberd_http_poll.erl: Likewise

	* src/mod_caps.erl: Fix compilation warnings: Part 2 (EJAB-290)
	* src/mod_configure.erl: Likewise
	* src/mod_configure2.erl: Likewise
	* src/mod_offline_odbc.erl: Likewise
	* src/mod_shared_roster.erl: Likewise
	* src/mod_stats.erl: Likewise
	* src/mod_version.erl: Likewise

	* src/cyrsasl.erl: Fix compilation warnings: Part 1 (EJAB-290)
	* src/ejabberd_auth_odbc.erl: Likewise
	* src/ejabberd_config.erl: Likewise